--- a/index.html
+++ b/index.html
@@ -611,6 +611,16 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/stephane-badts.jpg" alt="Stéphane BADTS">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Stéphane BADTS</h4>
+									<div class="team-member-position">Gestion de projet | xFive</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/pierre-banzet.jpg" alt="Pierre BANZET">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Pierre BANZET</h4>
@@ -620,11 +630,21 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/maxime-borges.jpg" alt="Maxime BORGES">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Maxime BORGES</h4>
 									<div class="team-member-position">Objets connectés | Strataggem</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
+								<img class="team-member-picture" src="images/contents/coach/isabelle-botzkowitz.jpg" alt="Isabelle BOTZKOWITZ">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Isabelle BOTZKOWITZ</h4>
+									<div class="team-member-position">Gestion de projet | Alsace Tech</div>
 								</div>
 							</div>
 						</div>
@@ -641,30 +661,10 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/stephane-badts.jpg" alt="Stéphane BADTS">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Stéphane BADTS</h4>
-									<div class="team-member-position">Gestion de projet | xFive</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/jean-noel-charon.jpg" alt="Jean-Noël CHARON">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Jean-Noël CHARON</h4>
 									<div class="team-member-position">Expert, Conseil, Formation | Capcod</div>
-								</div>
-							</div>
-						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/guillaume-claus.jpg" alt="Guillaume CLAUS">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Guillaume CLAUS</h4>
-									<div class="team-member-position">UX Design | Impact Positif</div>
 								</div>
 							</div>
 						</div>
@@ -737,6 +737,16 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/guillaume-claus.jpg" alt="Guillaume CLAUS">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Guillaume CLAUS</h4>
+							<div class="team-member-position">UX Design | Impact Positif</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/sabine-cullmann.jpg" alt="Sabine CULLMANN">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Sabine CULLMANN</h4>
@@ -746,7 +756,7 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/benoit-decavele.jpg" alt="Benoît DECAVELE">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Benoît DECAVELE</h4>
@@ -754,6 +764,16 @@
 						</div>
 					</div>
 				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/aurelie-devant.jpg" alt="Aurelie DEVANT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Aurelie DEVANT</h4>
+							<div class="team-member-position">Marketing</div>
+						</div>
+					</div>
+				</div> 
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -772,26 +792,6 @@
 							<h4 class="team-member-name">Thomas GUILLIER</h4>
 							<div class="team-member-position">Coach technique | Sogeti</div>
 						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/jonathan-hurter.jpg" alt="Jonathan HURTER">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Jonathan HURTER</h4>
-							<div class="team-member-position">Coach technique | Scalingo</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Yannick JOST</h4>
-							<div class="team-member-position">Objets connectés | Strataggem</div>
-						</div>								
 					</div>
 				</div>
 
@@ -847,7 +847,27 @@
 
 			</section>
 
-			<section class="team-section section" style="padding-top: 0;">				
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/jonathan-hurter.jpg" alt="Jonathan HURTER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Jonathan HURTER</h4>
+							<div class="team-member-position">Coach technique | Scalingo</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/yannick-jost.jpg" alt="Yannick Jost">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Yannick JOST</h4>
+							<div class="team-member-position">Objets connectés | Strataggem</div>
+						</div>								
+					</div>
+				</div>				
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
@@ -885,27 +905,6 @@
 						<div class="team-member-text">
 							<h4 class="team-member-name">Axel NEVEUX</h4>
 							<div class="team-member-position">Gestion de projet | xFive</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
-					
-						<div class="team-member-text">
-							<h4 class="team-member-name">Florian PETIT</h4>
-							<div class="team-member-position">Coach technique | ITS Future</div>
-						</div>
-					</div>
-				</div>	
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/arnaud-philibert.jpg" alt="Arnaud PHILIBERT">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Arnaud PHILIBERT</h4>
-							<div class="team-member-position">Gestion de projet</div>
 						</div>
 					</div>
 				</div>
@@ -1042,19 +1041,30 @@
 						</div>
 					</div>
 				</div> -->
-
-				<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
-							<div class="team-member-position">Fablab INSA</div>
-						</div>
-					</div>
-				</div> -->
 			</section>
 			
 			<section class="team-section section" style="padding-top: 0;">	
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/florian-petit.jpg" alt="Florian PETIT">
+					
+						<div class="team-member-text">
+							<h4 class="team-member-name">Florian PETIT</h4>
+							<div class="team-member-position">Coach technique | ITS Future</div>
+						</div>
+					</div>
+				</div>	
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/arnaud-philibert.jpg" alt="Arnaud PHILIBERT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Arnaud PHILIBERT</h4>
+							<div class="team-member-position">Gestion de projet</div>
+						</div>
+					</div>
+				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -1089,6 +1099,19 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/eddie-soulier.jpg" alt="Eddie SOULIER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Eddie SOULIER</h4>
+							<div class="team-member-position">Innovation | UTT Troyes</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			
+			<section class="team-section section" style="padding-top: 0;">				
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/leo-unbekandt.jpg" alt="Léo UNBEKANDT">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Léo UNBEKANDT</h4>
@@ -1110,10 +1133,30 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/djeinaba-yall.jpg" alt="Djeinaba YALL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Djeinaba YALL</h4>
+							<div class="team-member-position">Innovation | UTT Troyes</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/manuel-yguel.jpg" alt="Manuel YGUEL">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Manuel YGUEL</h4>
 							<div class="team-member-position">Objets connectés | Strataggem</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Widad ZAGHLOUL</h4>
+							<div class="team-member-position">Fablab INSA</div>
 						</div>
 					</div>
 				</div>
@@ -1167,7 +1210,6 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-
 							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/jury/patrick-llerena.jpg" alt="Patrick LLERENA">
 								<div class="team-member-text">
