--- a/index.html
+++ b/index.html
@@ -631,6 +631,16 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/coach/pascal-bastien.jpg" alt="Pascal BASTIEN">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Pascal BASTIEN</h4>
+									<div class="team-member-position">Explorateur du futur | Mana Mana</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/maxime-borges.jpg" alt="Maxime BORGES">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Maxime BORGES</h4>
@@ -640,7 +650,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
+							<div class="team-member even">
 								<img class="team-member-picture" src="images/contents/coach/isabelle-botzkowitz.jpg" alt="Isabelle BOTZKOWITZ">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Isabelle BOTZKOWITZ</h4>
@@ -650,7 +660,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/david-bruchlen.jpg" alt="David BRUCHLEN">
 								<div class="team-member-text">
 									<h4 class="team-member-name">David BRUCHLEN</h4>
@@ -658,26 +668,6 @@
 								</div>
 							</div>
 						</div>
-
-						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/jean-noel-charon.jpg" alt="Jean-Noël CHARON">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Jean-Noël CHARON</h4>
-									<div class="team-member-position">Expert, Conseil, Formation | Capcod</div>
-								</div>
-							</div>
-						</div>
-
-						<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/coach/pascal-bastien.jpg" alt="Pascal BASTIEN">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Pascal BASTIEN</h4>
-									<div class="team-member-position">Team coach</div>
-								</div>
-							</div>
-						</div> -->
 
 						<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
@@ -710,16 +700,6 @@
 						</div> -->
 
 						<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
-								<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
-								<div class="team-member-text">
-									<h4 class="team-member-name">Véronique CAMPILLO</h4>
-									<div class="team-member-position">Pitch training</div>
-								</div>
-							</div>
-						</div> -->
-
-						<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/coach/rene-carraz.jpg" alt="René CARRAZ">
 								<div class="team-member-text">
@@ -734,6 +714,26 @@
 			</section>
 
 			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/veronique-campillo.jpg" alt="Véronique CAMPILLO">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Véronique CAMPILLO</h4>
+							<div class="team-member-position">Préparation pitchs | Change ton Futur</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/jean-noel-charon.jpg" alt="Jean-Noël CHARON">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Jean-Noël CHARON</h4>
+							<div class="team-member-position">Expert, Conseil, Formation | Capcod</div>
+						</div>
+					</div>
+				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -766,16 +766,6 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/aurelie-devant.jpg" alt="Aurelie DEVANT">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Aurelie DEVANT</h4>
-							<div class="team-member-position">Marketing</div>
-						</div>
-					</div>
-				</div> 
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/yan-erik-decorde.jpg" alt="Yan-Erik DECORDE">
 						<div class="team-member-text">
@@ -784,16 +774,6 @@
 						</div>
 					</div>
 				</div> 
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/thomas-guillier.jpg" alt="Thomas GUILLIER">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Thomas GUILLIER</h4>
-							<div class="team-member-position">Coach technique | Sogeti</div>
-						</div>
-					</div>
-				</div>
 
 				<!-- <div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
@@ -851,6 +831,26 @@
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/aurelie-devant.jpg" alt="Aurelie DEVANT">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Aurelie DEVANT</h4>
+							<div class="team-member-position">Marketing</div>
+						</div>
+					</div>
+				</div> 
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/thomas-guillier.jpg" alt="Thomas GUILLIER">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Thomas GUILLIER</h4>
+							<div class="team-member-position">Coach technique | Sogeti</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/jonathan-hurter.jpg" alt="Jonathan HURTER">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Jonathan HURTER</h4>
@@ -885,26 +885,6 @@
 						<div class="team-member-text">
 							<h4 class="team-member-name">Alexis MARTIN</h4>
 							<div class="team-member-position">Propriété Industrielle | INPI</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
-						<img class="team-member-picture" src="images/contents/coach/horacio-miranda.jpg" alt="Horacio MIRANDA DE OLIVEIRA">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Horacio MIRANDA DE OLIVEIRA</h4>
-							<div class="team-member-position">Gestion de projet | Kreavizio</div>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
-						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
-						<div class="team-member-text">
-							<h4 class="team-member-name">Axel NEVEUX</h4>
-							<div class="team-member-position">Gestion de projet | xFive</div>
 						</div>
 					</div>
 				</div>
@@ -1043,7 +1023,27 @@
 				</div> -->
 			</section>
 			
-			<section class="team-section section" style="padding-top: 0;">	
+			<section class="team-section section" style="padding-top: 0;">
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member">
+						<img class="team-member-picture" src="images/contents/coach/horacio-miranda.jpg" alt="Horacio MIRANDA DE OLIVEIRA">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Horacio MIRANDA DE OLIVEIRA</h4>
+							<div class="team-member-position">Gestion de projet | Kreavizio</div>
+						</div>
+					</div>
+				</div>
+
+				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+					<div class="team-member even">
+						<img class="team-member-picture" src="images/contents/coach/axel-neveux.jpg" alt="Axel NEVEUX">
+						<div class="team-member-text">
+							<h4 class="team-member-name">Axel NEVEUX</h4>
+							<div class="team-member-position">Gestion de projet | xFive</div>
+						</div>
+					</div>
+				</div>	
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
@@ -1085,9 +1085,12 @@
 						</div>
 					</div>
 				</div>
+			</section>
+			
+			<section class="team-section section" style="padding-top: 0;">
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member">
+					<div class="team-member even">
 						<img class="team-member-picture" src="images/contents/coach/philippe-roser.jpg" alt="Philippe ROSER">
 					
 						<div class="team-member-text">
@@ -1098,17 +1101,14 @@
 				</div>
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-					<div class="team-member even">
+					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/eddie-soulier.jpg" alt="Eddie SOULIER">
 						<div class="team-member-text">
 							<h4 class="team-member-name">Eddie SOULIER</h4>
 							<div class="team-member-position">Innovation | UTT Troyes</div>
 						</div>
 					</div>
-				</div>
-			</section>
-			
-			<section class="team-section section" style="padding-top: 0;">				
+				</div>			
 
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member even">
@@ -1150,7 +1150,9 @@
 						</div>
 					</div>
 				</div>
-
+			</section>
+			
+			<section class="team-section section" style="padding-top: 0;">
 				<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 					<div class="team-member">
 						<img class="team-member-picture" src="images/contents/coach/widad-zaghloul.jpg" alt="Widad ZAGHLOUL">
