--- a/index.html
+++ b/index.html
@@ -1336,7 +1336,7 @@
 					<ul class="col-md-8 col-md-offset-2" style="padding-left: 110px;">
 						<li>Sopra Steria : Adhesion et accès au Fablab de la Fabrique pour 5 séances</li>
 						<li>ES : Billets « Allez Racing » pour assister à un match de Ligue 1 du RCS</li><li>Technologie et Stratégie :  Instaxmini de Fujifilm bleu clairs ou imprimante photo</li>
-						<li>RS Components : Arduino</li>
+						<li>RS Components : 10 Raspberry Pi</li>
 						<li>Orange : Casque VR</li>
 						<li>Sogeti : 6 assistants vocaux Google Home</li>
 					</ul>
