--- a/index.html
+++ b/index.html
@@ -1182,7 +1182,7 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member even">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/jury/tamim-daoudi.jpg" alt="Tamim DAOUDI">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Tamim DAOUDI</h4>
@@ -1203,6 +1203,16 @@
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
 							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/jury/patrick-llerena.jpg" alt="Patrick LLERENA">
+								<div class="team-member-text">
+									<h4 class="team-member-name">Patrick LLERENA</h4>
+									<div class="team-member-position">Professeur en Sciences Économiques Laboratoire BETA</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
+							<div class="team-member">
 								<img class="team-member-picture" src="images/contents/jury/michel-piguet.jpg" alt="Michel PIGUET">
 								<div class="team-member-text">
 									<h4 class="team-member-name">Michel PIGUET</h4>
@@ -1212,11 +1222,11 @@
 						</div>
 
 						<div class="col-sm-6 col-md-4 col-lg-2" data-animation="fadeIn">
-							<div class="team-member">
-								<img class="team-member-picture" src="images/contents/jury/patrick-llerena.jpg" alt="Patrick LLERENA">
+							<div class="team-member even">
+								<img class="team-member-picture" src="images/contents/jury/marc-vedrines.jpg" alt="Marc VEDRINES">
 								<div class="team-member-text">
-									<h4 class="team-member-name">Patrick LLERENA</h4>
-									<div class="team-member-position">Professeur en Sciences Économiques Laboratoire BETA</div>
+									<h4 class="team-member-name">Marc VEDRINES</h4>
+									<div class="team-member-position">Maître de conférence à l'INSA Strasbourg</div>
 								</div>
 							</div>
 						</div>
