--- a/index.html
+++ b/index.html
@@ -90,13 +90,13 @@
 							<li><a href="#faq">FAQ</a></li>
 
 							<!-- HEADER ACTION BUTTON -->
-							<li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">S'inscrire</a></li>
-							<li class="header-action-button"><a target="_blank" href="http://hic2018.sparkboard.com" class="btn btn-primary">Les défis</a></li>
+							<!-- <li class="header-action-button"><a target="_blank" href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-primary">S'inscrire</a></li> -->
+							<li class="header-action-button"><a target="_blank" href="http://hic2019.sparkboard.com" class="btn btn-primary">Les défis</a></li>
 							<!--<li class="header-action-button"><a target="_blank" href="http://2017.hackingindustry.camp" class="btn btn-primary">Édition 2017</a></li>-->
-							<a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; FR <span class="caret"></span></a>
+							<!-- <a href="#" class="dropdown-toggle external language-choice" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-globe" style="font-size: 22px; vertical-align: -3px;"></i>&nbsp; FR <span class="caret"></span></a>
 							<ul class="dropdown-menu dropdown-language" role="menu">
 								<li><a href="/en/">EN</a></li>
-							</ul>
+							</ul> -->
 						</ul>
 
 					</nav>
@@ -228,7 +228,7 @@
 								<div class="hero-features-left col-md-6">
 
 									<div class="video-embed">
-										<iframe width="560" height="315" src="https://youtu.be/LdxzQsZE93Y" frameborder="0" allowfullscreen></iframe>
+										<iframe width="560" height="315" src="https://www.youtube.com/embed/LdxzQsZE93Y" frameborder="0" allowfullscreen></iframe>
 										<!-- videos\Reportage_HIC_Version_ES_DEF.m4v -->
 									</div>
 									<!--<img src="images/contents/amphi2.jpg" style="width: 100%" alt="hacking industry camp 2017">-->
