--- a/index.html
+++ b/index.html
@@ -263,11 +263,11 @@
 									</ul>
 
 									<div class="hero-buttons col-md-12 text-center">
-										<a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a> <a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a>
+										<!-- <a href="planning.pdf" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Voir le planning</a> <a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary" style="margin-top: 20px;">J'y vais !</a> -->
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 										<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
-										<!--<button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button>-->
+										<button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button>
 									</div>
 
 								</div>
@@ -427,13 +427,13 @@
 						</div>-->
 						<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
-
-							<div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary">J'y vais !</a></div>
+							<div class="closing-buttons" data-animation="tada"><button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button></div>
+							<!-- <div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary">J'y vais !</a></div> -->
 						</div>
 						<div class="col-md-6">
 							<h3 class="closing-shout">Inscris ? Consultez dès à présent la liste des défis, vous pouvez également proposer le vôtre !</h3>
 
-							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2018.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
+							<div class="closing-buttons" target="_blank" data-animation="tada"><a href="http://hic2019.sparkboard.com/"class="btn btn-lg btn-primary" target="_blank">Voir les défis / Proposer un défi</a></div>
 						</div>
 					</div>
 				</div>
@@ -1670,8 +1670,8 @@
 					</h3>
 
 					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
-						<a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> -
-						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a>
+						<!-- <a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> -
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a> -->
 					</div>
 
 					<div class="footer-socmed">
