correction : billeterie -> billetterie

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 										<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 										<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
 										<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
-										<button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button>
+										<button disabled="disabled" class="btn btn-default">La billetterie ouvre bientôt !</button>
 									</div>
 
 								</div>
@@ -427,7 +427,7 @@
 						</div>-->
 						<div class="col-md-6">
 							<h3 class="closing-shout">Prêt à passer à l'action ? La première étape c'est de vous inscrire !</h3>
-							<div class="closing-buttons" data-animation="tada"><button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button></div>
+							<div class="closing-buttons" data-animation="tada"><button disabled="disabled" class="btn btn-default">La billetterie ouvre bientôt !</button></div>
 							<!-- <div class="closing-buttons" data-animation="tada"><a href="https://www.eventbrite.fr/e/billets-hacking-industry-camp-2018-48193252315" class="btn btn-lg btn-primary">J'y vais !</a></div> -->
 						</div>
 						<div class="col-md-6">
