--- a/index.html
+++ b/index.html
@@ -1546,6 +1546,38 @@
 
 				</div>
 			</section>
+			<section id="footer" class="footer-section section">
+
+				<div class="container">
+
+					<!--<img src="images/contents/upper-rhine40.jpg" alt=""><br> passe en catégorie partenaire-->
+					<img src="images/contents/interreg2018.jpg" alt=""><br>
+
+					<h3 class="footer-hashtag">
+						#HICamp
+					</h3>
+
+					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
+						<!-- <a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> -
+						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a> -->
+					</div>
+
+					<div class="footer-socmed">
+						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
+						<a href="https://twitter.com/AlsaceDigitale" target="_blank"><span class="fa fa-twitter"></span></a>
+					</div>
+
+					<div class="footer-copyright">
+						&copy; 2019 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale">Alsace Digitale</a> • <strong>Précédentes éditions :</strong>
+						<a href="http://2015.hackingindustry.camp/" target="_blank">2015</a> -
+						<a href="http://2016.hackingindustry.camp/" target="_blank">2016</a> -
+						<a href="http://2017.hackingindustry.camp/" target="_blank">2017</a> -
+						<a href="http://2018.hackingindustry.camp/" target="_blank">2018</a>
+					</div>
+
+				</div>
+
+			</section>
 
 			<!-- FAQ
 			================================= -->
@@ -1656,23 +1688,23 @@
 
 			</section>
 
-			<!-- FOOTER
+			<!-- FOOTER (has been moved under the partners for the 2019 edition)
 			================================= -->
-			<section id="footer" class="footer-section section">
+			<!-- <section id="footer" class="footer-section section">
 
-				<div class="container">
+				<div class="container"> -->
 
 					<!--<img src="images/contents/upper-rhine40.jpg" alt=""><br> passe en catégorie partenaire-->
-					<img src="images/contents/interreg2018.jpg" alt=""><br>
+					<!-- <img src="images/contents/interreg2018.jpg" alt=""><br>
 
 					<h3 class="footer-hashtag">
 						#HICamp
 					</h3>
 
-					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
+					<div style="display: block; margin-bottom: 40px; font-size: 18px;"> -->
 						<!-- <a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> -
 						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a> -->
-					</div>
+					<!-- </div>
 
 					<div class="footer-socmed">
 						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
@@ -1689,7 +1721,7 @@
 
 				</div>
 
-			</section>
+			</section> -->
 
 		</div>
 
