--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
 								<!--<a href="#winners" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les résultats</a>
 								<a href="https://www.facebook.com/media/set/?set=a.1860170557331117.1073741850.114361761912014&type=1&l=735a14f260" target="_blank" class="btn btn-lg btn-primary" style="margin-top: 20px;">Les photos</a>-->
 								<!--<a href="#about" class="btn btn-lg btn-primary" style="margin-top: 20px;">Découvrir</a>-->
-								<!--<button disabled="disabled" class="btn btn-default">La billeterie ouvre bientôt !</button>
+								<!--<button disabled="disabled" class="btn btn-default">La billetterie ouvre bientôt !</button>
 							</div>
 
 						</div>
@@ -1532,7 +1532,8 @@
 						<a href="https://www.edf.fr/" target="_blank"><img src="images/contents/edf.png" alt="EDF"></a>
 						<a href="http://capcod.eu/" target="_blank"><img style="height: 75px;" src="images/contents/capcod.png" alt="Capcod"></a>
 						<a href="http://blockchain-valley.io/" target="_blank"><img src="images/contents/blockchain-valley.png" alt="Blockchain Valley"></a>
-						<img src="images/contents/upper-rhine40.jpg" alt=""> <!-- devient partenaire Lundi 17/06/2019 -->
+						<a href="https://upperrhine40.eu/" target="_blank"><img src="images/contents/upper-rhine40.jpg" alt="UpperRhine4.0"></a> <!-- devient partenaire Lundi 17/06/2019 -->
+						<a href="https://upperrhine40.eu/" target="_blank"><img src="images/contents/interreg2018.jpg" alt=""><br></a> <!-- inclus dans upper rhine-->
 					</div>
 
 					<!--<div class="sponsors-row" data-animation="bounceIn">
@@ -1545,38 +1546,6 @@
 					</div>-->
 
 				</div>
-			</section>
-			<section id="footer" class="footer-section section">
-
-				<div class="container">
-
-					<!--<img src="images/contents/upper-rhine40.jpg" alt=""><br> passe en catégorie partenaire-->
-					<img src="images/contents/interreg2018.jpg" alt=""><br>
-
-					<h3 class="footer-hashtag">
-						#HICamp
-					</h3>
-
-					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
-						<!-- <a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> -
-						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a> -->
-					</div>
-
-					<div class="footer-socmed">
-						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
-						<a href="https://twitter.com/AlsaceDigitale" target="_blank"><span class="fa fa-twitter"></span></a>
-					</div>
-
-					<div class="footer-copyright">
-						&copy; 2019 <a href="http://www.alsacedigitale.org/" target="_blank" title="Alsace Digitale">Alsace Digitale</a> • <strong>Précédentes éditions :</strong>
-						<a href="http://2015.hackingindustry.camp/" target="_blank">2015</a> -
-						<a href="http://2016.hackingindustry.camp/" target="_blank">2016</a> -
-						<a href="http://2017.hackingindustry.camp/" target="_blank">2017</a> -
-						<a href="http://2018.hackingindustry.camp/" target="_blank">2018</a>
-					</div>
-
-				</div>
-
 			</section>
 
 			<!-- FAQ
@@ -1688,23 +1657,23 @@
 
 			</section>
 
-			<!-- FOOTER (has been moved under the partners for the 2019 edition)
+			<!-- FOOTER
 			================================= -->
-			<!-- <section id="footer" class="footer-section section">
+			<section id="footer" class="footer-section section">
 
-				<div class="container"> -->
+				<div class="container">
 
 					<!--<img src="images/contents/upper-rhine40.jpg" alt=""><br> passe en catégorie partenaire-->
-					<!-- <img src="images/contents/interreg2018.jpg" alt=""><br>
+					<!-- <img src="images/contents/interreg2018.jpg" alt=""><br> -->
 
 					<h3 class="footer-hashtag">
 						#HICamp
 					</h3>
 
-					<div style="display: block; margin-bottom: 40px; font-size: 18px;"> -->
+					<div style="display: block; margin-bottom: 40px; font-size: 18px;">
 						<!-- <a href="https://drive.google.com/file/d/1j-l3JHPOevdKIlTub1AjhZm5dKnm9mHa/view?usp=sharing" target="_blank">Communiqué de presse</a> -
 						<a href="https://drive.google.com/open?id=0B0S2y3rk51DNZ1BFNFI4cWFWUjQ2aThUblRBaVl5OWM3RmVv" target="_blank">Dossier de presse</a> -->
-					<!-- </div>
+					</div>
 
 					<div class="footer-socmed">
 						<a href="http://facebook.com/alsace.digitale" target="_blank"><span class="fa fa-facebook"></span></a>
@@ -1721,7 +1690,7 @@
 
 				</div>
 
-			</section> -->
+			</section>
 
 		</div>
 
