--- a/index.html
+++ b/index.html
@@ -1475,8 +1475,8 @@
 
 					<div class="sponsors-row" data-animation="bounceIn">
 						<h3 style="font-size: 17px;">Gold Sponsors</h3><br>
-						<!--<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>-->
-						<a href="http://www.strasbourg.port.fr/" target="_blank"><img src="images/contents/pas.png" alt="Port Autonome de Strasbourg"></a>
+						<a href="http://www.socomec.fr/Accueil_fr.html" target="_blank"><img src="images/contents/socomec.png" alt="Socomec France"></a>
+						<!--<a href="http://www.strasbourg.port.fr/" target="_blank"><img src="../images/contents/pas.png" alt="Port Autonome de Strasbourg"></a>-->
 						<a href="http://strasbourg.eu/" target="_blank"><img src="images/contents/banner-stras.png" alt="Strasbourg.eu"></a>
 					</div>
 
@@ -1488,6 +1488,7 @@
 						<a href="http://www.strataggem.com/" target="_blank" style="background: white; padding: 8px;"><img src="images/contents/strataggem.png" alt="Strataggem"></a>
 						<a href="http://www.insa-strasbourg.fr/" target="_blank"><img src="images/contents/insa.png" alt="INSA Strasbourg"></a>
 						<a href="https://www.orange.fr/" target="_blank"><img src="images/contents/orange.png" alt="orange"></a>
+						<a href="http://www.cushabitat.fr/" target="_blank"><img src="images/contents/ophea.jpg" alt="Ophéa" width="300" height="300"></a>
 						<!--<a href="http://www.alsacechampagneardennelorraine.eu/" target="_blank"><img src="images/contents/regiongrandest.png" alt="Région Grand Est"></a>
 						<a href="https://www.interregeurope.eu/" target="_blank"><img src="images/contents/interreg.jpg" alt="Interreg Europe"></a>-->
 					</div>
